hphp/test/slow/type_constraint/parse_super_constraint_bad.php.expectf

Fatal error: syntax error, unexpected T_SUPER, expecting '{' in %s on line 3
